FEAT: Add all sections to Home page

--- a/index.html
+++ b/index.html
@@ -11,10 +11,42 @@
 </head>
 
 <body>
+  <!-- NAV BAR -->
+  <div class="container footer">
+    <p>This is a boilerplate using Bootstrap and jQuery, ready to use on Gitpod.</p>
+  </div>
+
+  <!-- JUMBOTRON -->
   <div class="container">
     <h1 class="mt-5">Welcome to Gitpod Static Website!</h1>
     <p>This is a boilerplate using Bootstrap and jQuery, ready to use on Gitpod.</p>
   </div>
+
+    <!-- SECTION - OUR EXPERTISE -->
+  <div class="container">
+    <h1 class="mt-5">Welcome to Gitpod Static Website!</h1>
+    <p>This is a boilerplate using Bootstrap and jQuery, ready to use on Gitpod.</p>
+  </div>
+
+    <!-- SECTION - OUR MISSION, OUR VISION -->
+  <div class="container">
+    <h1 class="mt-5">Welcome to Gitpod Static Website!</h1>
+    <p>This is a boilerplate using Bootstrap and jQuery, ready to use on Gitpod.</p>
+  </div>
+
+  <!-- TESTIMONIALS -->
+  <div class="container">
+    <h1 class="mt-5">Welcome to Gitpod Static Website!</h1>
+    <p>This is a boilerplate using Bootstrap and jQuery, ready to use on Gitpod.</p>
+  </div>
+
+    <!-- FOOTER -->
+  <div class="container">
+    <h1 class="mt-5">Welcome to Gitpod Static Website!</h1>
+    <p>This is a boilerplate using Bootstrap and jQuery, ready to use on Gitpod.</p>
+  </div>
+
+
 
   <!-- jQuery CDN -->
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
