STYLE: Initail styling of sections in Home page

--- a/index.html
+++ b/index.html
@@ -12,37 +12,32 @@
 
 <body>
   <!-- NAV BAR -->
-  <div class="container footer">
+  <div class="container nav-bar">
     <p>This is a boilerplate using Bootstrap and jQuery, ready to use on Gitpod.</p>
   </div>
 
   <!-- JUMBOTRON -->
-  <div class="container">
-    <h1 class="mt-5">Welcome to Gitpod Static Website!</h1>
+  <div class="container jumbotron">
     <p>This is a boilerplate using Bootstrap and jQuery, ready to use on Gitpod.</p>
   </div>
 
     <!-- SECTION - OUR EXPERTISE -->
-  <div class="container">
-    <h1 class="mt-5">Welcome to Gitpod Static Website!</h1>
+  <div class="container section-our-expertise">
     <p>This is a boilerplate using Bootstrap and jQuery, ready to use on Gitpod.</p>
   </div>
 
     <!-- SECTION - OUR MISSION, OUR VISION -->
-  <div class="container">
-    <h1 class="mt-5">Welcome to Gitpod Static Website!</h1>
+  <div class="container section-our-misson">
     <p>This is a boilerplate using Bootstrap and jQuery, ready to use on Gitpod.</p>
   </div>
 
   <!-- TESTIMONIALS -->
-  <div class="container">
-    <h1 class="mt-5">Welcome to Gitpod Static Website!</h1>
+  <div class="container section-testimonials">
     <p>This is a boilerplate using Bootstrap and jQuery, ready to use on Gitpod.</p>
   </div>
 
     <!-- FOOTER -->
-  <div class="container">
-    <h1 class="mt-5">Welcome to Gitpod Static Website!</h1>
+  <div class="container footer">
     <p>This is a boilerplate using Bootstrap and jQuery, ready to use on Gitpod.</p>
   </div>
 
