FEAT: Add content to header on Home page

--- a/index.html
+++ b/index.html
@@ -11,9 +11,20 @@
 </head>
 
 <body>
-  <!-- NAV BAR -->
-  <div class="container nav-bar">
-    <p>This is a boilerplate using Bootstrap and jQuery, ready to use on Gitpod.</p>
+  <!-- HEADER -->
+  <div class="container header">
+    <div class="nav-bar">
+      <div>
+        <img src="path-to-image.jpg" alt="Description of the image" class="d-inline">
+      </div>
+      <div>
+        <l>
+          <li class="d-inline">home</li>
+          <li class="d-inline">about us</li>
+          <li class="d-inline">contact</li>
+        </l>
+      </div>
+    </div>
   </div>
 
   <!-- JUMBOTRON -->
