FEAT: Add content to jumbotron on Home page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,20 @@
 
   <!-- JUMBOTRON -->
   <div class="container jumbotron">
-    <p>This is a boilerplate using Bootstrap and jQuery, ready to use on Gitpod.</p>
+    <div class="jumbotron-content">
+      <div class="jumbotron-para">
+        <h2>
+          We are PARC training
+        </h2>
+        <p>
+          Promoting Anti-discriminatory Responses for Change in the mental health field.
+          If you are interested in learning more about diverse and inclusive practice get in touch with us today.
+        </p>
+        <button>
+          Get in touch
+        </button>
+      </div>
+    </div>
   </div>
 
     <!-- SECTION - OUR EXPERTISE -->
