--- a/index.html
+++ b/index.html
@@ -47,65 +47,69 @@
 
     <!-- SECTION - OUR EXPERTISE -->
   <div class="container section-our-expertise">
-    <div class="col-8 mx-auto">
-      <div>
-        <h1 class="pt-5 pb-5">
+    <div class="col-8 py-5 mx-auto">
+      <div class="py-3">
+        <h1 class="py-5">
           our expertise
         </h1>
       </div>
 
-      <div class="our-expertise-card">
-        <h3 class="py-3">
-          training
-        </h3>
-        <p>
-          We provide bespoke training to mental health organisations and professional bodies on anti-discriminatory practice,
-          exploring the inequalities in mental health in terms of the nine protected characteristics and the social graces.
-          We challenge current practices, and encourage reflection on how we position ourselves as Mental Health Professionals
-          in order to meet the needs of our diverse communities in the therapeutic and supervisory realm.
-        </p>
-        <p>
-          Topics covered:
-        </p>
-        <l>
-          <li>
-            Diversity in an Irish context
-          </li>
-          <li>
-            Unconscious bias
-          </li>
-          <li>
-            Triple Barrier Affect in mental health
-          </li>
-          <li>
-            Cultural Competence vs Cultural Humility
-          </li>
-          <li>
-            Working with interpreters
-          </li>
-          <li>
-            Exploring Theoretical perspectives
-          </li>
-          <li>
-            The Danger of the Single Story
-          </li>
-          <li>
-            Multicultural supervision
-          </li>
-        </l>
+      <div class="py-3">
+        <div class="our-expertise-card">
+          <h3 class="py-3">
+            training
+          </h3>
+          <p>
+            We provide bespoke training to mental health organisations and professional bodies on anti-discriminatory practice,
+            exploring the inequalities in mental health in terms of the nine protected characteristics and the social graces.
+            We challenge current practices, and encourage reflection on how we position ourselves as Mental Health Professionals
+            in order to meet the needs of our diverse communities in the therapeutic and supervisory realm.
+          </p>
+          <p>
+            Topics covered:
+          </p>
+          <l>
+            <li>
+              Diversity in an Irish context
+            </li>
+            <li>
+              Unconscious bias
+            </li>
+            <li>
+              Triple Barrier Affect in mental health
+            </li>
+            <li>
+              Cultural Competence vs Cultural Humility
+            </li>
+            <li>
+              Working with interpreters
+            </li>
+            <li>
+              Exploring Theoretical perspectives
+            </li>
+            <li>
+              The Danger of the Single Story
+            </li>
+            <li>
+              Multicultural supervision
+            </li>
+          </l>
+        </div>
+      </div>
+      <div class="py-3">
+        <div class="our-expertise-card">
+          <h3 class="py-3">
+            consultancy
+          </h3>
+          <p>
+            We work with mental health organisations and individual practitioners on how to make their practice more
+            accessible to different groups and how to attract a more diverse workforce. The use of case studies,
+            organisational reflection and strategizing are utilised.
+          </p>
+        </div>
       </div>
 
-      <div class="our-expertise-card">
-        <h3 class="py-3">
-          consultancy
-        </h3>
-        <p>
-          We work with mental health organisations and individual practitioners on how to make their practice more
-          accessible to different groups and how to attract a more diverse workforce. The use of case studies,
-          organisational reflection and strategizing are utilised.
-        </p>
-      </div>
-
+    <div class="py-3">
       <div class="our-expertise-card">
         <h3 class="py-3">
           supervision
@@ -115,13 +119,14 @@
           who are interested in developing/enhancing their practice in working with diversity.
         </p>
       </div>
-
     </div>
   </div>
 
     <!-- SECTION - OUR MISSION, OUR VISION -->
   <div class="container section-our-misson">
-    <p>This is a boilerplate using Bootstrap and jQuery, ready to use on Gitpod.</p>
+    <div class="col-8 mx-auto">
+      <p>This is a boilerplate using Bootstrap and jQuery, ready to use on Gitpod.</p>
+    </div>
   </div>
 
   <!-- TESTIMONIALS -->
