FEAT: Home page - Add content to Our Vision and Our Mission sections

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
           </l>
         </div>
       </div>
+
       <div class="py-3">
         <div class="our-expertise-card">
           <h3 class="py-3">
@@ -109,23 +110,52 @@
         </div>
       </div>
 
-    <div class="py-3">
-      <div class="our-expertise-card">
-        <h3 class="py-3">
-          supervision
+      <div class="py-3">
+        <div class="our-expertise-card">
+          <h3 class="py-3">
+            supervision
+          </h3>
+          <p>
+            We provide individual and group supervision to mental health professionals and supervisors
+            who are interested in developing/enhancing their practice in working with diversity.
+          </p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+    <!-- SECTION - OUR VISION -->
+  <div class="container section-our-vision my-2">
+    <div class="col-7 py-5 mx-auto">
+      <div class="pb-5">
+        <h3 class="py-4">
+          our vision
         </h3>
         <p>
-          We provide individual and group supervision to mental health professionals and supervisors
-          who are interested in developing/enhancing their practice in working with diversity.
+          Mental health professionals in Ireland would be mindful and aware of the effects of social injustice and discrimination 
+          on mental health and modify their practice in order to respond to the unique needs of all of their clients.
         </p>
       </div>
     </div>
   </div>
 
-    <!-- SECTION - OUR MISSION, OUR VISION -->
-  <div class="container section-our-misson">
-    <div class="col-8 mx-auto">
-      <p>This is a boilerplate using Bootstrap and jQuery, ready to use on Gitpod.</p>
+  <!-- SECTION - OUR MISSION -->
+  <div class="container section-our-mission my-2">
+    <div class="col-7 py-5 mx-auto">
+      <div class="pb-5">
+        <h3 class="py-4">
+          our mission
+        </h3>
+        <p>
+          To raise awareness and depth of understanding in Mental Health Professionals on the impact of conscious and unconscious bias,
+          discrimination and prejudice on members of diverse groups and develop an inclusive practice in order to provide a meaningful experience for service users.
+        </p>
+         <p>
+          This will be accomplished through training, supervision, reflective learning,
+          consultation and ongoing support building competency, confidence, and skills in Mental Health Professionals.
+        </p>
+      </div>
     </div>
   </div>
 
