--- a/index.html
+++ b/index.html
@@ -159,9 +159,40 @@
     </div>
   </div>
 
-  <!-- TESTIMONIALS -->
+  <!-- SECTION - TESTIMONIALS -->
   <div class="container section-testimonials">
-    <p>This is a boilerplate using Bootstrap and jQuery, ready to use on Gitpod.</p>
+    <div class="col py-5 mx-auto">
+      <div class="py-3">
+        <h2 class="py-3 text-center">
+          testimonials
+        </h2>
+      </div>
+      <div class="container py-4">
+        <div class="container testimonials-card mx-auto d-flex gap-4">
+
+          <div class="col-4 d-inline-block" style="background-color: #bbb;">
+            aaa
+          </div>
+          <div class="col-8 d-inline-block">
+            <h5 class="py-3">
+              PCHEI Conference 2024
+            </h5>
+            <p>
+              “I thoroughly enjoyed the workshop and felt challenged to think about this fascinating area in a compassionate space.”
+            </p>
+            <p>
+              - Conference attendee
+            </p>
+          </div>
+
+        </div>
+      </div>
+      <div class="py-4 container">
+        <div class="col-2 mx-auto" style="background-color: #bbb;">
+          aaa
+        </div>
+      </div>
+    </div>
   </div>
 
     <!-- FOOTER -->
