FEAT: Home Page - Add content to footer

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <div class="container section-our-expertise">
     <div class="col-8 py-5 mx-auto">
       <div class="py-3">
-        <h1 class="py-5">
+        <h1 class="py-5 text-center">
           our expertise
         </h1>
       </div>
@@ -195,11 +195,31 @@
     </div>
   </div>
 
-    <!-- FOOTER -->
+  <!-- FOOTER -->
   <div class="container footer">
-    <p>This is a boilerplate using Bootstrap and jQuery, ready to use on Gitpod.</p>
+    <div class="section-footer">
+      <div>
+        <img src="path-to-image.jpg" alt="Description of the image" class="d-inline-block">
+      </div>
+      <div>
+        <l>
+          <li class="d-inline">home</li>
+          <li class="d-inline">about us</li>
+          <li class="d-inline">contact</li>
+        </l>
+      </div>
+      <div>
+        <p>parctrainingireland@gmail.com</p>
+      </div>
+    </div>
   </div>
-
+  <div class="container">
+    <div class="py-3 section-footer mx-auto d-inline-block">
+      <div>
+        <p class="text-center">© 2025 PARC Training</p>
+      </div>
+    </div>
+  </div>
 
 
   <!-- jQuery CDN -->
