STYLE: Home Page - Navbar

--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
 
 <body>
   <!-- HEADER -->
-  <div class="container header">
-    <div class="nav-bar">
+  <div class="container header pt-1 pb-2">
+    <div class="col-8 mx-auto navbar">
       <div>
-        <img src="path-to-image.jpg" alt="Description of the image" class="d-inline">
+        <a href="#">
+          <img src="assets/images/parc-logo-color.svg" alt="PARC logo in colour" class="d-inline">
+        </a>
       </div>
       <div>
-        <l>
-          <li class="d-inline">home</li>
-          <li class="d-inline">about us</li>
-          <li class="d-inline">contact</li>
+        <l class="nav-links">
+          <li class="d-inline"><a href="#">home</a></li>
+          <li class="d-inline"><a href="#">about us</a></li>
+          <li class="d-inline"><a href="#">contact</a></li>
         </l>
       </div>
     </div>
