REFACTOR: Home Page - Jumbotron container CSS

--- a/index.html
+++ b/index.html
@@ -35,13 +35,12 @@
 
   <!-- JUMBOTRON -->
   <div class="container jumbotron">
-    <div class="jumbotron-content">
-      <div class="jumbotron-para">
-        <h2>
-          We are PARC training
-        </h2>
+    <div class="col-8 mx-auto">
+      <div class="container">
+        <img src="assets/images/home-jumbotron-pic.png" alt="Image of the tall grass on the top of the hill overlooking the sea in the sunset">
+        <h2> We are PARC training</h2>
         <p>
-          Promoting Anti-discriminatory Responses for Change in the mental health field.
+          Promoting Anti-discriminatory Responses for Change in the mental health field. <br>
           If you are interested in learning more about diverse and inclusive practice get in touch with us today.
         </p>
         <button>
