--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
   </div>
 
   <!-- JUMBOTRON -->
-  <div class="container jumbotron">
+  <div class="container jumbotron jumbotron-image">
+    <img src="assets/images/parc-petal-black.svg" class="overlay-img" alt="Overlay element">
     <div class="col-8 mx-auto">
       <div class="container">
-        <img src="assets/images/home-jumbotron-pic.png" alt="Image of the tall grass on the top of the hill overlooking the sea in the sunset">
-        <h2> We are PARC training</h2>
-        <p>
+        <img src="assets/images/home-jumbotron-pic.png" class="background-img" alt="Image of the tall grass on the top of the hill overlooking the sea in the sunset">
+        <h2 class="text-white"> we are PARC training</h2>
+        <p class="text-white">
           Promoting Anti-discriminatory Responses for Change in the mental health field. <br>
           If you are interested in learning more about diverse and inclusive practice get in touch with us today.
         </p>
