STYLE: Home Page - Nav links further styling

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       </div>
       <div>
         <l class="nav-links">
-          <li class="d-inline"><a href="#">home</a></li>
-          <li class="d-inline"><a href="#">about us</a></li>
-          <li class="d-inline"><a href="#">contact</a></li>
+          <li class="d-inline"><a class="px-4 py-3 rounded" href="#">home</a></li>
+          <li class="d-inline"><a class="px-4 py-3 rounded" href="#">about us</a></li>
+          <li class="d-inline"><a class="px-4 py-3 rounded" href="#">contact</a></li>
         </l>
       </div>
     </div>
