STYLE: Add initial styling of the button

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
           Promoting Anti-discriminatory Responses for Change in the mental health field. <br>
           If you are interested in learning more about diverse and inclusive practice get in touch with us today.
         </p>
-        <button>
-          Get in touch
-        </button>
+        <div class="button">
+          <a href="#">Get in touch</a>
+        </div>
       </div>
     </div>
   </div>
