--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
   <meta charset="UTF-8">
   <title>PARC Training | Promoting Anti-Discriminatory Responses for Change</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
   <!-- Bootstrap CSS CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  
   <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/style.css">
+  
+  <!-- Font Awesome CDN link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  
   <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -45,7 +51,10 @@
           If you are interested in learning more about diverse and inclusive practice get in touch with us today.
         </p>
         <div class="button">
-          <a href="#">Get in touch</a>
+          <a href="#" class="button-link">
+            <span class="button-text d-block">Get in touch</span>
+            <span class="button-icon pt-1"><i class="fa-solid fa-circle-arrow-right"></i></span>
+          </a>
         </div>
       </div>
     </div>
