STYLE: Home Page - initial styling of Our Expertise card

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   <!-- HEADER -->
   <div class="container header pt-1 pb-2">
-    <div class="col-8 mx-auto navbar">
+    <div class="col-11 col-md-10 col-lg-8 mx-auto navbar">
       <div>
         <a href="#">
           <img src="assets/images/parc-logo-color.svg" alt="PARC logo in colour" class="d-inline">
@@ -42,15 +42,15 @@
   <!-- JUMBOTRON -->
   <div class="container jumbotron jumbotron-image">
     <img src="assets/images/parc-petal-black.svg" class="overlay-img" alt="Overlay element">
-    <div class="col-8 mx-auto">
+    <div class="col-11 col-md-10 col-lg-8 mx-auto">
       <div class="container">
         <img src="assets/images/home-jumbotron-pic.png" class="background-img" alt="Image of the tall grass on the top of the hill overlooking the sea in the sunset">
         <h2 class="text-white"> we are PARC training</h2>
-        <p class="text-white">
+        <p class="text-white py-2">
           Promoting Anti-discriminatory Responses for Change in the mental health field. <br>
           If you are interested in learning more about diverse and inclusive practice get in touch with us today.
         </p>
-        <div class="button">
+        <div class="button py-2">
           <a href="#" class="button-link">
             <span class="button-text d-block">Get in touch</span>
             <span class="button-icon pt-1"><i class="fa-solid fa-circle-arrow-right"></i></span>
@@ -62,53 +62,65 @@
 
     <!-- SECTION - OUR EXPERTISE -->
   <div class="container section-our-expertise">
-    <div class="col-8 py-5 mx-auto">
+    <div class="col-11 col-md-10 col-lg-8 py-5 mx-auto">
       <div class="py-3">
-        <h1 class="py-5 text-center">
+        <h1 class="py-5 text-center text-parc-red">
           our expertise
         </h1>
       </div>
-
       <div class="py-3">
         <div class="our-expertise-card">
-          <h3 class="py-3">
-            training
-          </h3>
-          <p>
-            We provide bespoke training to mental health organisations and professional bodies on anti-discriminatory practice,
-            exploring the inequalities in mental health in terms of the nine protected characteristics and the social graces.
-            We challenge current practices, and encourage reflection on how we position ourselves as Mental Health Professionals
-            in order to meet the needs of our diverse communities in the therapeutic and supervisory realm.
-          </p>
-          <p>
-            Topics covered:
-          </p>
-          <l>
-            <li>
-              Diversity in an Irish context
-            </li>
-            <li>
-              Unconscious bias
-            </li>
-            <li>
-              Triple Barrier Affect in mental health
-            </li>
-            <li>
-              Cultural Competence vs Cultural Humility
-            </li>
-            <li>
-              Working with interpreters
-            </li>
-            <li>
-              Exploring Theoretical perspectives
-            </li>
-            <li>
-              The Danger of the Single Story
-            </li>
-            <li>
-              Multicultural supervision
-            </li>
-          </l>
+          <div class="d-flex">
+            <span>
+              <img src="assets/images/parc-logomark-red.svg" alt="PARC logomark red">
+            </span> 
+            <span>
+              <h3 class="py-3 text-parc-red">training</h3>
+            </span> 
+          </div>
+          <div>
+            <p>
+              We provide bespoke training to mental health organisations and professional bodies on anti-discriminatory practice,
+              exploring the inequalities in mental health in terms of the nine protected characteristics and the social graces.
+              We challenge current practices, and encourage reflection on how we position ourselves as Mental Health Professionals
+              in order to meet the needs of our diverse communities in the therapeutic and supervisory realm.
+            </p>
+            <p class="fw-bold">
+              Topics covered:
+            </p>
+            <l>
+              <li>
+                Diversity in an Irish context
+              </li>
+              <li>
+                Unconscious bias
+              </li>
+              <li>
+                Triple Barrier Affect in mental health
+              </li>
+              <li>
+                Cultural Competence vs Cultural Humility
+              </li>
+              <li>
+                Working with interpreters
+              </li>
+              <li>
+                Exploring Theoretical perspectives
+              </li>
+              <li>
+                The Danger of the Single Story
+              </li>
+              <li>
+                Multicultural supervision
+              </li>
+            </l>
+          </div>
+          <div class="button">
+            <a href="#" class="button-link">
+              <span class="button-text d-block">Get in touch</span>
+              <span class="button-icon pt-1"><i class="fa-solid fa-circle-arrow-right"></i></span>
+            </a>
+          </div>
         </div>
       </div>
 
