--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
   <div class="container section-our-expertise">
     <div class="col-11 col-md-10 col-lg-8 py-5 mx-auto">
       <div class="py-3">
-        <h1 class="py-5 text-center text-parc-red">
+        <h1 class="py-4 text-center text-parc-red">
           our expertise
         </h1>
       </div>
       <div class="py-3">
         <div class="our-expertise-card">
-          <div class="d-flex">
+          <div class="d-flex gap-3">
             <span>
               <img src="assets/images/parc-logomark-red.svg" alt="PARC logomark red">
             </span> 
@@ -78,7 +78,7 @@
               <h3 class="py-3 text-parc-red">training</h3>
             </span> 
           </div>
-          <div>
+          <div class="pb-4">
             <p>
               We provide bespoke training to mental health organisations and professional bodies on anti-discriminatory practice,
               exploring the inequalities in mental health in terms of the nine protected characteristics and the social graces.
@@ -115,11 +115,13 @@
               </li>
             </l>
           </div>
-          <div class="button">
-            <a href="#" class="button-link">
-              <span class="button-text d-block">Get in touch</span>
-              <span class="button-icon pt-1"><i class="fa-solid fa-circle-arrow-right"></i></span>
-            </a>
+          <div class="container d-flex justify-content-end">
+            <div class="col button py-1">
+              <a href="#" class="button-link">
+                <span class="button-text d-block">Get in touch</span>
+                <span class="button-icon pt-1"><i class="fa-solid fa-circle-arrow-right"></i></span>
+              </a>
+            </div>
           </div>
         </div>
       </div>
