STYLE: Home Page - complete hover state of the Our Expertise card

--- a/index.html
+++ b/index.html
@@ -68,11 +68,13 @@
           our expertise
         </h1>
       </div>
+
+      <!-- Training -->
       <div class="py-3">
         <div class="our-expertise-card">
           <div class="d-flex gap-3">
             <span>
-              <img src="assets/images/parc-logomark-red.svg" alt="PARC logomark red">
+              <img class="img-parc-logomark" src="assets/images/parc-logomark-red.svg" alt="PARC logomark red">
             </span> 
             <span>
               <h3 class="py-3 text-parc-red">training</h3>
@@ -116,7 +118,7 @@
             </l>
           </div>
           <div class="container d-flex justify-content-end">
-            <div class="col button py-1">
+            <div class="col button py-1 button-card">
               <a href="#" class="button-link">
                 <span class="button-text d-block">Get in touch</span>
                 <span class="button-icon pt-1"><i class="fa-solid fa-circle-arrow-right"></i></span>
@@ -126,6 +128,66 @@
         </div>
       </div>
 
+      <!-- Consultancy -->
+      <div class="py-3">
+        <div class="our-expertise-card">
+          <div class="d-flex gap-3">
+            <span>
+              <img class="img-parc-logomark" src="assets/images/parc-logomark-red.svg" alt="PARC logomark red">
+            </span> 
+            <span>
+              <h3 class="py-3 text-parc-red">consultancy</h3>
+            </span> 
+          </div>
+          <div class="pb-4">
+            <p>
+              We provide bespoke training to mental health organisations and professional bodies on anti-discriminatory practice,
+              exploring the inequalities in mental health in terms of the nine protected characteristics and the social graces.
+              We challenge current practices, and encourage reflection on how we position ourselves as Mental Health Professionals
+              in order to meet the needs of our diverse communities in the therapeutic and supervisory realm.
+            </p>
+            <p class="fw-bold">
+              Topics covered:
+            </p>
+            <l>
+              <li>
+                Diversity in an Irish context
+              </li>
+              <li>
+                Unconscious bias
+              </li>
+              <li>
+                Triple Barrier Affect in mental health
+              </li>
+              <li>
+                Cultural Competence vs Cultural Humility
+              </li>
+              <li>
+                Working with interpreters
+              </li>
+              <li>
+                Exploring Theoretical perspectives
+              </li>
+              <li>
+                The Danger of the Single Story
+              </li>
+              <li>
+                Multicultural supervision
+              </li>
+            </l>
+          </div>
+          <div class="container d-flex justify-content-end">
+            <div class="col button py-1 button-card">
+              <a href="#" class="button-link">
+                <span class="button-text d-block">Get in touch</span>
+                <span class="button-icon pt-1"><i class="fa-solid fa-circle-arrow-right"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Consultancy -->
       <div class="py-3">
         <div class="our-expertise-card">
           <h3 class="py-3">
@@ -139,6 +201,7 @@
         </div>
       </div>
 
+      <!-- Supervision -->
       <div class="py-3">
         <div class="our-expertise-card">
           <h3 class="py-3">
