STYLE: Home Page - complete styling of Our Expertise section

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     <!-- SECTION - OUR EXPERTISE -->
   <div class="container section-our-expertise">
     <div class="col-11 col-md-10 col-lg-8 py-5 mx-auto">
+
       <div class="py-3">
         <h1 class="py-4 text-center text-parc-red">
           our expertise
@@ -141,40 +142,10 @@
           </div>
           <div class="pb-4">
             <p>
-              We provide bespoke training to mental health organisations and professional bodies on anti-discriminatory practice,
-              exploring the inequalities in mental health in terms of the nine protected characteristics and the social graces.
-              We challenge current practices, and encourage reflection on how we position ourselves as Mental Health Professionals
-              in order to meet the needs of our diverse communities in the therapeutic and supervisory realm.
+            We work with mental health organisations and individual practitioners on how to make their practice more
+            accessible to different groups and how to attract a more diverse workforce. The use of case studies,
+            organisational reflection and strategizing are utilised.
             </p>
-            <p class="fw-bold">
-              Topics covered:
-            </p>
-            <l>
-              <li>
-                Diversity in an Irish context
-              </li>
-              <li>
-                Unconscious bias
-              </li>
-              <li>
-                Triple Barrier Affect in mental health
-              </li>
-              <li>
-                Cultural Competence vs Cultural Humility
-              </li>
-              <li>
-                Working with interpreters
-              </li>
-              <li>
-                Exploring Theoretical perspectives
-              </li>
-              <li>
-                The Danger of the Single Story
-              </li>
-              <li>
-                Multicultural supervision
-              </li>
-            </l>
           </div>
           <div class="container d-flex justify-content-end">
             <div class="col button py-1 button-card">
@@ -187,30 +158,31 @@
         </div>
       </div>
 
-      <!-- Consultancy -->
-      <div class="py-3">
-        <div class="our-expertise-card">
-          <h3 class="py-3">
-            consultancy
-          </h3>
-          <p>
-            We work with mental health organisations and individual practitioners on how to make their practice more
-            accessible to different groups and how to attract a more diverse workforce. The use of case studies,
-            organisational reflection and strategizing are utilised.
-          </p>
-        </div>
-      </div>
-
       <!-- Supervision -->
       <div class="py-3">
         <div class="our-expertise-card">
-          <h3 class="py-3">
-            supervision
-          </h3>
-          <p>
+          <div class="d-flex gap-3">
+            <span>
+              <img class="img-parc-logomark" src="assets/images/parc-logomark-red.svg" alt="PARC logomark red">
+            </span> 
+            <span>
+              <h3 class="py-3 text-parc-red">supervision</h3>
+            </span> 
+          </div>
+          <div class="pb-4">
+            <p>
             We provide individual and group supervision to mental health professionals and supervisors
             who are interested in developing/enhancing their practice in working with diversity.
-          </p>
+            </p>
+          </div>
+          <div class="container d-flex justify-content-end">
+            <div class="col button py-1 button-card">
+              <a href="#" class="button-link">
+                <span class="button-text d-block">Get in touch</span>
+                <span class="button-icon pt-1"><i class="fa-solid fa-circle-arrow-right"></i></span>
+              </a>
+            </div>
+          </div>
         </div>
       </div>
 
