STYLE: Home Page - Style Our Vision section

--- a/index.html
+++ b/index.html
@@ -190,13 +190,19 @@
   </div>
 
     <!-- SECTION - OUR VISION -->
-  <div class="container section-our-vision my-2">
-    <div class="col-7 py-5 mx-auto">
+  <div class="container py-5 our-section-image">
+    <img src="assets/images/home-vision-pic.png" class="background-img" alt="aaaaa">
+    <div class="col-7 py-5 mx-auto text-white">
+      <div class="d-flex gap-4">
+          <span class="d-flex align-items-centre">
+            <img src="assets/images/icon-vision.svg" alt="Icon for Our Vision paragraph (an eye)">
+          </span> 
+          <span>
+            <h2 class="py-3">our vision</h2>
+          </span> 
+          </div>
       <div class="pb-5">
-        <h3 class="py-4">
-          our vision
-        </h3>
-        <p>
+        <p class="para-1-250">
           Mental health professionals in Ireland would be mindful and aware of the effects of social injustice and discrimination 
           on mental health and modify their practice in order to respond to the unique needs of all of their clients.
         </p>
