STYLE: Home Page - Style the Our Mission section

--- a/index.html
+++ b/index.html
@@ -190,12 +190,12 @@
   </div>
 
     <!-- SECTION - OUR VISION -->
-  <div class="container py-5 our-section-image">
-    <img src="assets/images/home-vision-pic.png" class="background-img" alt="aaaaa">
+  <div class="container py-5 my-3 our-section-image">
+    <img src="assets/images/home-vision-pic.png" class="background-img" alt="Picture of a small island">
     <div class="col-7 py-5 mx-auto text-white">
       <div class="d-flex gap-4">
           <span class="d-flex align-items-centre">
-            <img src="assets/images/icon-vision.svg" alt="Icon for Our Vision paragraph (an eye)">
+            <img class="our-icon" src="assets/images/icon-vision.svg" alt="Icon for Our Vision paragraph (an eye)">
           </span> 
           <span>
             <h2 class="py-3">our vision</h2>
@@ -210,17 +210,23 @@
     </div>
   </div>
 
-  <!-- SECTION - OUR MISSION -->
-  <div class="container section-our-mission my-2">
-    <div class="col-7 py-5 mx-auto">
+    <!-- SECTION - OUR MISSION -->
+  <div class="container py-5 my-3 our-section-image">
+    <img src="assets/images/home-mission-pic.png" class="background-img" alt="Picture of a beach">
+    <div class="col-7 py-5 mx-auto text-white">
+      <div class="d-flex gap-4">
+          <span class="d-flex align-items-centre">
+            <img class="our-icon" src="assets/images/icon-mission.svg" alt="Icon for Our Vision paragraph (an eye)">
+          </span> 
+          <span>
+            <h2 class="py-3">our mission</h2>
+          </span> 
+          </div>
       <div class="pb-5">
-        <h3 class="py-4">
-          our mission
-        </h3>
-        <p>
+        <p class="para-1-250">
           To raise awareness and depth of understanding in Mental Health Professionals on the impact of conscious and unconscious bias,
           discrimination and prejudice on members of diverse groups and develop an inclusive practice in order to provide a meaningful experience for service users.
-        </p>
+        </p class="para-1-250">
          <p>
           This will be accomplished through training, supervision, reflective learning,
           consultation and ongoing support building competency, confidence, and skills in Mental Health Professionals.
