STYLE: Home Page - replace images for Our mission and Our vision sections

--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
 
     <!-- SECTION - OUR VISION -->
   <div class="container py-5 my-3 our-section-image">
-    <img src="assets/images/home-vision-pic.png" class="background-img" alt="Picture of a small island">
-    <div class="col-7 py-5 mx-auto text-white">
+    <img src="assets/images/home-vision-pic.jpg" class="background-img" alt="Picture of a small island">
+    <div class="col-11 col-md-10 col-lg-7 py-5 mx-auto text-white">
       <div class="d-flex gap-4">
           <span class="d-flex align-items-centre">
             <img class="our-icon" src="assets/images/icon-vision.svg" alt="Icon for Our Vision paragraph (an eye)">
@@ -212,8 +212,8 @@
 
     <!-- SECTION - OUR MISSION -->
   <div class="container py-5 my-3 our-section-image">
-    <img src="assets/images/home-mission-pic.png" class="background-img" alt="Picture of a beach">
-    <div class="col-7 py-5 mx-auto text-white">
+    <img src="assets/images/home-mission-pic.jpg" class="background-img" alt="Picture of a beach">
+    <div class="col-11 col-md-10 col-lg-7 py-5 mx-auto text-white">
       <div class="d-flex gap-4">
           <span class="d-flex align-items-centre">
             <img class="our-icon" src="assets/images/icon-mission.svg" alt="Icon for Our Vision paragraph (an eye)">
