STYLE: Footer initial styling

--- a/index.html
+++ b/index.html
@@ -237,9 +237,9 @@
 
   <!-- SECTION - TESTIMONIALS -->
   <div class="container section-testimonials">
-    <div class="col py-5 mx-auto">
+    <div class="col py-4 mx-auto">
       <div class="py-3">
-        <h2 class="py-3 text-center">
+        <h2 class="py-3 text-center text-parc-dgrey">
           testimonials
         </h2>
       </div>
@@ -272,10 +272,10 @@
   </div>
 
   <!-- FOOTER -->
-  <div class="container footer">
-    <div class="section-footer">
+  <div class="container footer text-parc-lgrey bg-parc-dgrey py-5">
+    <div class="col-11 col-lg-10 section-footer py-5">
       <div>
-        <img src="path-to-image.jpg" alt="Description of the image" class="d-inline-block">
+        <img src="assets/images/parc-logo-white.svg" alt="Description of the image" class="d-inline-block">
       </div>
       <div>
         <l>
@@ -289,8 +289,8 @@
       </div>
     </div>
   </div>
-  <div class="container">
-    <div class="py-3 section-footer mx-auto d-inline-block">
+  <div class="container footer text-parc-lgrey bg-parc-ddgrey mx-auto">
+    <div class="col-11 col-lg-10 py-3 section-footer d-inline-block mx-auto">
       <div>
         <p class="text-center">© 2025 PARC Training</p>
       </div>
