STYLE: Initial footer styling

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           </span> 
           </div>
       <div class="pb-5">
-        <p class="para-1-250">
+        <p class="text-1-250">
           Mental health professionals in Ireland would be mindful and aware of the effects of social injustice and discrimination 
           on mental health and modify their practice in order to respond to the unique needs of all of their clients.
         </p>
@@ -223,10 +223,10 @@
           </span> 
           </div>
       <div class="pb-5">
-        <p class="para-1-250">
+        <p class="text-1-250">
           To raise awareness and depth of understanding in Mental Health Professionals on the impact of conscious and unconscious bias,
           discrimination and prejudice on members of diverse groups and develop an inclusive practice in order to provide a meaningful experience for service users.
-        </p class="para-1-250">
+        </p class="text-1-250">
          <p>
           This will be accomplished through training, supervision, reflective learning,
           consultation and ongoing support building competency, confidence, and skills in Mental Health Professionals.
@@ -272,27 +272,29 @@
   </div>
 
   <!-- FOOTER -->
-  <div class="container footer text-parc-lgrey bg-parc-dgrey py-5">
+  <div class="container text-parc-lgrey bg-parc-dgrey py-4">
     <div class="col-11 col-lg-10 section-footer py-5">
       <div>
         <img src="assets/images/parc-logo-white.svg" alt="Description of the image" class="d-inline-block">
       </div>
       <div>
-        <l>
-          <li class="d-inline">home</li>
-          <li class="d-inline">about us</li>
-          <li class="d-inline">contact</li>
+        <l class="footer-links">
+          <li><a href="">home</a></li>
+          <li><a href="">about us</a></li>
+          <li><a href="">contact</a></li>
         </l>
       </div>
       <div>
-        <p>parctrainingireland@gmail.com</p>
+        <a class="text-1-000" href="">parctrainingireland@gmail.com</a>
       </div>
     </div>
   </div>
-  <div class="container footer text-parc-lgrey bg-parc-ddgrey mx-auto">
-    <div class="col-11 col-lg-10 py-3 section-footer d-inline-block mx-auto">
+
+  <!-- COPYRIGHT -->
+  <div class="container text-parc-lgrey bg-parc-dgrey mx-auto">
+    <div class="col-11 col-lg-10 pt-3 section-footer d-flex justify-content-center">
       <div>
-        <p class="text-center">© 2025 PARC Training</p>
+        <p class="text-center text-0-750">© 2025 PARC Training</p>
       </div>
     </div>
   </div>
