--- a/index.html
+++ b/index.html
@@ -272,33 +272,37 @@
   </div>
 
   <!-- FOOTER -->
-  <div class="container text-parc-lgrey bg-parc-dgrey py-4">
-    <div class="col-11 col-lg-10 section-footer py-5">
+  <div class="container text-parc-lgrey bg-parc-dgrey pt-4 pb-1">
+    <div class="col-11 section-footer py-5">
       <div>
-        <img src="assets/images/parc-logo-white.svg" alt="Description of the image" class="d-inline-block">
+        <a href="#">
+          <img src="assets/images/parc-logo-white.svg" alt="Description of the image" class="d-inline-block">
+        </a>
       </div>
       <div>
         <l class="footer-links">
-          <li><a href="">home</a></li>
-          <li><a href="">about us</a></li>
-          <li><a href="">contact</a></li>
+          <li><a class="py-3 px-4 rounded" href="">home</a></li>
+          <li><a class="py-3 px-4 rounded" href="">about us</a></li>
+          <li><a class="py-3 px-4 rounded" href="">contact</a></li>
         </l>
       </div>
       <div>
-        <a class="text-1-000" href="">parctrainingireland@gmail.com</a>
+        <span class="footer-links">
+          <a class="text-1-000 py-3 px-5 rounded" href="mailto:parctrainingireland@gmail.com?subject=Hello!&body=Hello%2C%0A%0AI%20would%20like%20to%20ask%20about%20your%20services...%0A%0AKind%20regards%2C">
+            <span><i class="fa-regular fa-envelope text-1-250 px-1"></i></span>
+            <span>parctrainingireland@gmail.com</span>
+          </a>
+        </span>
+      </div>
+    </div>
+    <div class="container section-copyright">
+      <div class="col pt-3">
+        <div>
+          <p class="text-center text-0-875">&copy; <span id="year"></span> PARC Training</p>
+        </div>
       </div>
     </div>
   </div>
-
-  <!-- COPYRIGHT -->
-  <div class="container text-parc-lgrey bg-parc-dgrey mx-auto">
-    <div class="col-11 col-lg-10 pt-3 section-footer d-flex justify-content-center">
-      <div>
-        <p class="text-center text-0-750">© 2025 PARC Training</p>
-      </div>
-    </div>
-  </div>
-
 
   <!-- jQuery CDN -->
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
