--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>PARC Training | Promoting Anti-Discriminatory Responses for Change</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Favicon -->
+  <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
   
   <!-- Bootstrap CSS CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -21,8 +24,8 @@
 </head>
 
 <body>
-  <!-- HEADER -->
-  <div class="container header pt-1 pb-2">
+  <!-- NAVBAR -->
+  <nav class="container navbar pt-1 pb-2">
     <div class="col-11 col-md-10 col-lg-8 mx-auto navbar">
       <div>
         <a href="#">
@@ -37,12 +40,12 @@
         </l>
       </div>
     </div>
-  </div>
+  </nav>
 
-  <!-- JUMBOTRON -->
-  <div class="container jumbotron jumbotron-image">
+  <!-- HEADER -->
+  <header class="container header header-image">
     <img src="assets/images/parc-petal-black.svg" class="overlay-img" alt="Overlay element">
-    <div class="col-11 col-md-10 col-lg-8 mx-auto">
+    <div class="col-10 col-lg-8 mx-auto">
       <div class="container">
         <img src="assets/images/home-jumbotron-pic.png" class="background-img" alt="Image of the tall grass on the top of the hill overlooking the sea in the sunset">
         <h2 class="text-white"> we are PARC training</h2>
@@ -58,7 +61,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </header>
 
     <!-- SECTION - OUR EXPERTISE -->
   <div class="container section-our-expertise">
@@ -192,7 +195,7 @@
     <!-- SECTION - OUR VISION -->
   <div class="container py-5 my-3 our-section-image">
     <img src="assets/images/home-vision-pic.jpg" class="background-img" alt="Picture of a small island">
-    <div class="col-11 col-md-10 col-lg-7 py-5 mx-auto text-white">
+    <div class="col-10 col-lg-7 py-5 mx-auto text-white">
       <div class="d-flex gap-4">
           <span class="d-flex align-items-centre">
             <img class="our-icon" src="assets/images/icon-vision.svg" alt="Icon for Our Vision paragraph (an eye)">
@@ -213,7 +216,7 @@
     <!-- SECTION - OUR MISSION -->
   <div class="container py-5 my-3 our-section-image">
     <img src="assets/images/home-mission-pic.jpg" class="background-img" alt="Picture of a beach">
-    <div class="col-11 col-md-10 col-lg-7 py-5 mx-auto text-white">
+    <div class="col-10 col-lg-7 py-5 mx-auto text-white">
       <div class="d-flex gap-4">
           <span class="d-flex align-items-centre">
             <img class="our-icon" src="assets/images/icon-mission.svg" alt="Icon for Our Vision paragraph (an eye)">
@@ -272,7 +275,7 @@
   </div>
 
   <!-- FOOTER -->
-  <div class="container text-parc-lgrey bg-parc-dgrey pt-4 pb-1">
+  <footer class="container text-parc-lgrey bg-parc-dgrey pt-4 pb-1">
     <div class="col-11 section-footer py-5">
       <div>
         <a href="#">
@@ -302,7 +305,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </footer>
 
   <!-- jQuery CDN -->
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
