FEAT: Add scroll to top button

--- a/index.html
+++ b/index.html
@@ -307,6 +307,13 @@
     </div>
   </footer>
 
+  <!-- Scroll to top button -->
+  <div class="container">
+    <button id="scrollTopBtn" title="Go to top">
+      <i class="fa-solid fa-arrow-up"></i>
+    </button>
+  </div>
+
   <!-- jQuery CDN -->
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <!-- Bootstrap JS CDN -->
