STYLE: Testimonial card

--- a/index.html
+++ b/index.html
@@ -246,26 +246,27 @@
           testimonials
         </h2>
       </div>
+
       <div class="container py-4">
         <div class="container testimonials-card mx-auto d-flex gap-4">
-
-          <div class="col-4 d-inline-block" style="background-color: #bbb;">
-            aaa
+          <div class="col-5 d-inline-block">
+            <img class="testimonial-img" src="assets/images/testimonial-1.jpg" alt="Image of Angie at PCHEI 2024 Conference">
           </div>
-          <div class="col-8 d-inline-block">
-            <h5 class="py-3">
+          <div class="col-7 d-inline-block">
+            <h6 class="py-3">
               PCHEI Conference 2024
-            </h5>
-            <p>
+            </h6>
+            <p class="text-1-000">
               “I thoroughly enjoyed the workshop and felt challenged to think about this fascinating area in a compassionate space.”
             </p>
-            <p>
+            <p class="text-0-875 text-parc-grey pt-3">
               - Conference attendee
             </p>
           </div>
 
         </div>
       </div>
+
       <div class="py-4 container">
         <div class="col-2 mx-auto" style="background-color: #bbb;">
           aaa
