FEAT: Home Page - Add Testimonials carousel slider

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     </div>
   </div>
 
-    <!-- SECTION - OUR MISSION -->
+  <!-- SECTION - OUR MISSION -->
   <div class="container py-5 my-3 our-section-image">
     <img src="assets/images/home-mission-pic.jpg" class="background-img" alt="Picture of a beach">
     <div class="col-10 col-lg-7 py-5 mx-auto text-white">
@@ -274,6 +274,37 @@
       </div>
     </div>
   </div>
+
+  <!-- SECTION - TESTIMONIALS (TRY OUT) -->
+  <!-- <div class="container py-4">
+    <!-- Carousel Strip -->
+    <div class="carousel-strip-wrapper overflow-auto">
+      <div class="carousel-strip d-flex gap-3" id="carouselStrip">
+        <div class="slide rounded bg-secondary text-white text-center">1</div>
+        <div class="slide rounded bg-secondary text-white text-center">2</div>
+        <div class="slide rounded bg-secondary text-white text-center">3</div>
+        <div class="slide rounded bg-secondary text-white text-center">4</div>
+        <div class="slide rounded bg-secondary text-white text-center">5</div>
+        <div class="slide rounded bg-secondary text-white text-center">6</div>
+      </div>
+    </div>
+
+    <!-- Navigation Buttons -->
+    <div class="d-flex justify-content-center gap-3 my-3">
+      <button class="btn btn-outline-primary" onclick="scrollCarouselLeft()">‹</button>
+      <button class="btn btn-outline-primary" onclick="scrollCarouselRight()">›</button>
+    </div>
+
+    <!-- Pagination Dots -->
+    <div class="d-flex justify-content-center gap-2" id="paginationDots">
+      <span class="dot active" onclick="goToSlide(0)"></span>
+      <span class="dot" onclick="goToSlide(1)"></span>
+      <span class="dot" onclick="goToSlide(2)"></span>
+      <span class="dot" onclick="goToSlide(3)"></span>
+      <span class="dot" onclick="goToSlide(4)"></span>
+    </div>
+  </div> -->
+
 
   <!-- FOOTER -->
   <footer class="container text-parc-lgrey bg-parc-dgrey pt-4 pb-1">
